[Media Router Action] Hide action back in the overflow menu after popping it out

In macOS, when the user right clicks on the media router action while it's in
the toolbar overflow menu, it gets popped out onto the toolbar to show its
context menu. This change makes the action go back into the overflow menu once
the context menu is closed, which will be consistent with the behavior of
extension actions.

BUG=670585

Review-Url: https://codereview.chromium.org/2579613002
Cr-Commit-Position: refs/heads/master@{#441253}

Former-commit-id: 05d325bc6eacf649f14b1fddce78e1268c8b6e89