chrome/browser/ui/toolbar/media_router_action.h
@@ -56,6 +56,7 @@ class MediaRouterAction : public ToolbarActionViewController,
   void HidePopup() override;
   gfx::NativeView GetPopupNativeView() override;
   ui::MenuModel* GetContextMenu() override;
+  void OnContextMenuClosed() override;
   bool ExecuteAction(bool by_user) override;
   void UpdateState() override;
   bool DisabledClickOpensMenu() const override;
